--- a/hiv_ex.rmd
+++ b/hiv_ex.rmd
@@ -144,60 +144,66 @@ brm_post<-as.data.frame(brm_fit_il_6)
 ## HIV example using Bayesian CPM model
 
 ```{r hiv_stan_dat}
-hiv_dat_il_6 <- mkStanDat(hivdat, outcome="il_6", link = 2,
-                          preds = c("bmi_c", "age_c", "male", "nonwhite",
-                                 "study.linc", "cd4_100_c", "smoker"))
+# use updated model w/ output compatible with loo & ppc
+#https://cloud.r-project.org/web/packages/loo/vignettes/loo2-example.html
 
-hiv_dat_il_6_nocnt <- mkStanDat(hivdat, outcome="il_6", link = 2,
-                          preds = c("bmi", "age", "male", "nonwhite",
-                                 "study.linc", "cd4", "smoker"))
-
-hiv_dat_hscrp <- mkStanDat(hivdat, outcome="hscrp", link = 2,
-                          preds = c("bmi_c", "age_c", "male", "nonwhite",
-                                 "study.linc", "cd4_100_c", "smoker"))
-
-hiv_dat_il_1_beta <- mkStanDat(hivdat, outcome="il_1_beta", link = 2,
-                          preds = c("bmi_c", "age_c", "male", "nonwhite",
-                                 "study.linc", "cd4_100_c", "smoker"))
-
-hiv_dat_cd14 <- mkStanDat(hivdat, outcome="cd14", link = 2,
-                          preds = c("bmi_c", "age_c", "male", "nonwhite",
-                                 "study.linc", "cd4_100_c", "smoker"))
-
-hiv_dat_leptin <- mkStanDat(hivdat, outcome="leptin", link = 2,
-                          preds = c("bmi_c", "age_c", "male", "nonwhite",
-                                 "study.linc", "cd4_100_c", "smoker"))
+#try different link functions & different conc params
+# 
+# hiv_dat_il_6 <- mkStanDat(hivdat, outcome="il_6", link = 2,
+#                           preds = c("bmi_c", "age_c", "male", "nonwhite",
+#                                  "study.linc", "cd4_100_c", "smoker"))
+# 
+# hiv_dat_il_6_nocnt <- mkStanDat(hivdat, outcome="il_6", link = 2,
+#                           preds = c("bmi", "age", "male", "nonwhite",
+#                                  "study.linc", "cd4", "smoker"))
+# 
+# hiv_dat_hscrp <- mkStanDat(hivdat, outcome="hscrp", link = 2,
+#                           preds = c("bmi_c", "age_c", "male", "nonwhite",
+#                                  "study.linc", "cd4_100_c", "smoker"))
+# 
+# hiv_dat_il_1_beta <- mkStanDat(hivdat, outcome="il_1_beta", link = 2,
+#                           preds = c("bmi_c", "age_c", "male", "nonwhite",
+#                                  "study.linc", "cd4_100_c", "smoker"))
+# 
+# hiv_dat_cd14 <- mkStanDat(hivdat, outcome="cd14", link = 2,
+#                           preds = c("bmi_c", "age_c", "male", "nonwhite",
+#                                  "study.linc", "cd4_100_c", "smoker"))
+# 
+# hiv_dat_leptin <- mkStanDat(hivdat, outcome="leptin", link = 2,
+#                           preds = c("bmi_c", "age_c", "male", "nonwhite",
+#                                  "study.linc", "cd4_100_c", "smoker"))
 ```
 
 ```{r il_6_fit}
-
 #!! find better inits?
-fit_il_6 <- bayes_cpm(hiv_dat_il_6, seed=77845, 
-                 iter=4000, warmup=2000, chains=2, init="0", 
-                 control = list(adapt_delta = 0.95))
+fit_il_6 <- bayes_cpm(il_6 ~ bmi_c + age_c + male + nonwhite + study.linc +
+                        cd4_100_c + smoker, data=hivdat, link="probit", 
+                        seed=77845, iter=4000, warmup=2000, chains=2, init="0", 
+                        control = list(adapt_delta = 0.95))
 
 if(0){
-fit_il_6_nocnt <- bayes_cpm(hiv_dat_il_6_nocnt, seed=77845, 
-                 iter=4000, warmup=2000, chains=2, init="0", 
-                 control = list(adapt_delta = 0.95))
+fit_il_6_nocnt <- bayes_cpm(il_6 ~ bmi + age + male + nonwhite + study.linc +
+                        cd4_100 + smoker, data=hivdat, link="probit", 
+                        seed=77845, iter=4000, warmup=2000, chains=2, init="0", 
+                        control = list(adapt_delta = 0.95))
 }
 
-qplot(summary(fit_il_6)$summary[,"Rhat"])
+qplot(summary(fit_il_6$stanfit)$summary[,"Rhat"])
 
 main_pars <- c("b[1]","b[2]","b[3]","b[4]","b[5]","b[6]","b[7]")
 main_pars_labs <-c("bmi_c", "age_c", "male", "nonwhite", "study.linc", "cd4_100_c", "smoker")
 main_pars_labs2 <-c("BMI", "Age", "Male", "Nonwhite", "Study.linc", "CD4/100", "Smoker")
 
-summary(fit_il_6, pars=main_pars)$summary %>% round(3) %>% set_rownames(main_pars_labs)
+summary(fit_il_6$stanfit, pars=main_pars)$summary %>% round(3) %>% set_rownames(main_pars_labs)
 
-rstan::traceplot(fit_il_6, pars=main_pars) 
+rstan::traceplot(fit_il_6$stanfit, pars=main_pars) 
 # https://stackoverflow.com/questions/57411900/changing-the-title-of-individual-plots-within-a-panel-of-traceplots-in-ggplot-st
 
 
-il_6_posta <- as.matrix(fit_il_6, pars=main_pars[c(1,2,6)])  %>%
+il_6_posta <- as.matrix(fit_il_6$stanfit, pars=main_pars[c(1,2,6)])  %>%
 mcmc_intervals() + scale_y_discrete(labels =main_pars_labs2[c(1,2,6)] )
 
-il_6_postb <- as.matrix(fit_il_6, pars=main_pars[c(3,4,5,7)])  %>%
+il_6_postb <- as.matrix(fit_il_6$stanfit, pars=main_pars[c(3,4,5,7)])  %>%
 mcmc_intervals() + scale_y_discrete(labels = main_pars_labs2[c(3,4,5,7)])
 
 
@@ -205,12 +211,12 @@ plot_grid(il_6_posta,il_6_postb,ncol=1)
 
 ggsave(file.path(figdir,"il_6_post.png"),width=6,height=4)
 
-stan_plot(fit_il_6, pars=main_pars) + 
+stan_plot(fit_il_6$stanfit, pars=main_pars) + 
   scale_y_discrete(breaks=paste0("b[",1:7,"]"),
         labels=letters[1:7])
 
 # cutpoints
-il_6_ct_plt<-plot(fit_il_6,pars=c(paste0("cutpoints[",1:173,"]")),
+il_6_ct_plt<-plot(fit_il_6$stanfit,pars=c(paste0("cutpoints[",1:173,"]")),
                   ci_level = 0.5)
 
 il_6_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
@@ -237,39 +243,39 @@ ggsave(file.path(figdir,"il_6_post_ct.png"),width=6,height=4)
 #         legend.text = element_text(size=fctsiz))
 
 
-pltdt %>% 
-  ggplot(aes(x=cpt,y=`50%`)) + 
-  geom_line(aes(color='median')) +
-  geom_ribbon(aes(ymin=`25%`,ymax=`75%`,fill='50% int'))+
-  geom_ribbon(aes(ymin=`2.5%`,ymax=`97.5%`,fill='95% int'))+
-  scale_color_manual(labels = c('median'),
-                     values = c('blue')) +
-  scale_fill_manual(labels= c('50% int','95% int'),
-                    values = alpha('blue',c(0.4,0.2)))
+# pltdt %>% 
+#   ggplot(aes(x=cpt,y=`50%`)) + 
+#   geom_line(aes(color='median')) +
+#   geom_ribbon(aes(ymin=`25%`,ymax=`75%`,fill='50% int'))+
+#   geom_ribbon(aes(ymin=`2.5%`,ymax=`97.5%`,fill='95% int'))+
+#   scale_color_manual(labels = c('median'),
+#                      values = c('blue')) +
+#   scale_fill_manual(labels= c('50% int','95% int'),
+#                     values = alpha('blue',c(0.4,0.2)))
 
 if(0){
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",1:20,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",21:40,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",41:60,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",61:80,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",81:100,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",101:120,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",121:140,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",141:160,"]")))
-traceplot(fit_il_6, pars=c(paste0("cutpoints[",161:173,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",1:20,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",21:40,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",41:60,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",61:80,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",81:100,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",101:120,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",121:140,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",141:160,"]")))
+traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",161:173,"]")))
 }
 
 # cell probs
 if(0){
-plot(fit_il_6,pars=c(paste0("pi[",1:20,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",21:40,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",41:60,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",61:80,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",81:100,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",101:120,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",121:140,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",141:160,"]")))
-plot(fit_il_6,pars=c(paste0("pi[",161:174,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",1:20,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",21:40,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",41:60,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",61:80,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",81:100,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",101:120,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",121:140,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",141:160,"]")))
+plot(fit_il_6$stanfit,pars=c(paste0("pi[",161:174,"]")))
 }
 
 ```
@@ -277,13 +283,13 @@ plot(fit_il_6,pars=c(paste0("pi[",161:174,"]")))
 
 <!-- estimated transformation -->
 ```{r il_6_trans}
-cp_il_6 <- summary(fit_il_6, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
+cp_il_6 <- summary(fit_il_6$stanfit, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
 
-cp_il_6_nocnt <- summary(fit_il_6_nocnt, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
+cp_il_6_nocnt <- summary(fit_il_6_nocnt$stanfit, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
 
-il_6_trans_dat <- cbind(hiv_dat_il_6$truey0[2:174], cp_il_6) %>% as.data.frame() %>% rename(`IL-6`=V1)
+il_6_trans_dat <- cbind(fit_il_6$standata$truey0[2:174], cp_il_6) %>% as.data.frame() %>% rename(`IL-6`=V1)
 
-il_6_trans_dat_nocnt <- cbind(hiv_dat_il_6$truey0[2:174], cp_il_6_nocnt) %>% as.data.frame() %>% rename(`IL-6`=V1)
+il_6_trans_dat_nocnt <- cbind(fit_il_6_nocnt$standata$truey0[2:174], cp_il_6_nocnt) %>% as.data.frame() %>% rename(`IL-6`=V1)
 
 qplot(hivdat0$il_6,bins=35)+xlab("IL-6") + 
   annotate(geom="text", x=18, y=32, 
@@ -312,7 +318,7 @@ ggsave(file.path(figdir,"il_6_trans_nocnt.png"),width=6,height=4)
 ```
 
 ```{r il_6_bmi_dat}
-mn_summ_il_6 <- getMean(fit_il_6, hiv_dat_il_6, newdat1)
+mn_summ_il_6 <- getMean(fit_il_6, newdat1)
 #mn_vals_il_6 <- getMean(fit_il_6, hiv_dat_il_6, newdat1, summ=FALSE)
 med_summ_il_6 <- getQuantile(fit_il_6, hiv_dat_il_6, newdat1, q=0.5)
 q90_summ_il_6 <- getQuantile(fit_il_6, hiv_dat_il_6, newdat1, q=0.9)
