--- a/hiv_ex.rmd
+++ b/hiv_ex.rmd
@@ -144,8 +144,6 @@ brm_post<-as.data.frame(brm_fit_il_6)
 ## HIV example using Bayesian CPM model
 
 ```{r hiv_stan_dat}
-# use updated model w/ output compatible with loo & ppc
-#https://cloud.r-project.org/web/packages/loo/vignettes/loo2-example.html
 
 #try different link functions & different conc params
 # 
@@ -156,30 +154,35 @@ brm_post<-as.data.frame(brm_fit_il_6)
 # hiv_dat_il_6_nocnt <- mkStanDat(hivdat, outcome="il_6", link = 2,
 #                           preds = c("bmi", "age", "male", "nonwhite",
 #                                  "study.linc", "cd4", "smoker"))
-# 
 # hiv_dat_hscrp <- mkStanDat(hivdat, outcome="hscrp", link = 2,
 #                           preds = c("bmi_c", "age_c", "male", "nonwhite",
 #                                  "study.linc", "cd4_100_c", "smoker"))
-# 
 # hiv_dat_il_1_beta <- mkStanDat(hivdat, outcome="il_1_beta", link = 2,
 #                           preds = c("bmi_c", "age_c", "male", "nonwhite",
 #                                  "study.linc", "cd4_100_c", "smoker"))
-# 
 # hiv_dat_cd14 <- mkStanDat(hivdat, outcome="cd14", link = 2,
 #                           preds = c("bmi_c", "age_c", "male", "nonwhite",
 #                                  "study.linc", "cd4_100_c", "smoker"))
-# 
 # hiv_dat_leptin <- mkStanDat(hivdat, outcome="leptin", link = 2,
 #                           preds = c("bmi_c", "age_c", "male", "nonwhite",
 #                                  "study.linc", "cd4_100_c", "smoker"))
 ```
 
+### IL-6
+
 ```{r il_6_fit}
 #!! find better inits?
-fit_il_6 <- bayes_cpm(il_6 ~ bmi_c + age_c + male + nonwhite + study.linc +
-                        cd4_100_c + smoker, data=hivdat, link="probit", 
-                        seed=77845, iter=4000, warmup=2000, chains=2, init="0", 
-                        control = list(adapt_delta = 0.95))
+fit_il_6_probit <- bayes_cpm(il_6 ~ bmi_c + age_c + male + 
+                               nonwhite + study.linc + cd4_100_c + smoker,
+                             data=hivdat, link="probit", seed=77845,
+                             iter=4000, warmup=2000, chains=2, init="0", 
+                             control = list(adapt_delta = 0.95))
+
+fit_il_6_logit <- bayes_cpm(il_6 ~ bmi_c + age_c + male + 
+                              nonwhite + study.linc + cd4_100_c + smoker,
+                            data=hivdat, link="logistic", seed=77845,
+                            iter=4000, warmup=2000, chains=2, init="0", 
+                            control = list(adapt_delta = 0.95))
 
 if(0){
 fit_il_6_nocnt <- bayes_cpm(il_6 ~ bmi + age + male + nonwhite + study.linc +
@@ -187,23 +190,48 @@ fit_il_6_nocnt <- bayes_cpm(il_6 ~ bmi + age + male + nonwhite + study.linc +
                         seed=77845, iter=4000, warmup=2000, chains=2, init="0", 
                         control = list(adapt_delta = 0.95))
 }
+```
 
-qplot(summary(fit_il_6$stanfit)$summary[,"Rhat"])
+```{r il_6_mcmc_chk}
+qplot(summary(fit_il_6_probit$stanfit)$summary[,"Rhat"])
+qplot(summary(fit_il_6_logit$stanfit)$summary[,"Rhat"])
 
 main_pars <- c("b[1]","b[2]","b[3]","b[4]","b[5]","b[6]","b[7]")
 main_pars_labs <-c("bmi_c", "age_c", "male", "nonwhite", "study.linc", "cd4_100_c", "smoker")
 main_pars_labs2 <-c("BMI", "Age", "Male", "Nonwhite", "Study.linc", "CD4/100", "Smoker")
 
-summary(fit_il_6$stanfit, pars=main_pars)$summary %>% round(3) %>% set_rownames(main_pars_labs)
+summary(fit_il_6_probit$stanfit, pars=main_pars)$summary %>% round(3) %>% set_rownames(main_pars_labs)
 
-rstan::traceplot(fit_il_6$stanfit, pars=main_pars) 
+summary(fit_il_6_logit$stanfit, pars=main_pars)$summary %>% round(3) %>% set_rownames(main_pars_labs)
+
+rstan::traceplot(fit_il_6_probit$stanfit, pars=main_pars) 
+rstan::traceplot(fit_il_6_logit$stanfit, pars=main_pars) 
 # https://stackoverflow.com/questions/57411900/changing-the-title-of-individual-plots-within-a-panel-of-traceplots-in-ggplot-st
+```
 
 
-il_6_posta <- as.matrix(fit_il_6$stanfit, pars=main_pars[c(1,2,6)])  %>%
+```{r il_6_loo}
+# use updated model w/ output compatible with loo & ppc
+#https://cloud.r-project.org/web/packages/loo/vignettes/loo2-example.html
+
+library(loo)
+
+ll_il6_probit<-extract_log_lik(fit_il_6_probit$stanfit)
+ll_il6_logit<-extract_log_lik(fit_il_6_logit$stanfit)
+
+# logit is preferred model
+loo_compare(loo(ll_il6_logit), loo(ll_il6_probit))
+
+plot(loo(ll_il6_probit))
+plot(loo(ll_il6_logit))
+```
+
+
+```{r il_6_pars}
+il_6_posta <- as.matrix(fit_il_6_logit$stanfit, pars=main_pars[c(1,2,6)])  %>%
 mcmc_intervals() + scale_y_discrete(labels =main_pars_labs2[c(1,2,6)] )
 
-il_6_postb <- as.matrix(fit_il_6$stanfit, pars=main_pars[c(3,4,5,7)])  %>%
+il_6_postb <- as.matrix(fit_il_6_logit$stanfit, pars=main_pars[c(3,4,5,7)])  %>%
 mcmc_intervals() + scale_y_discrete(labels = main_pars_labs2[c(3,4,5,7)])
 
 
@@ -211,12 +239,12 @@ plot_grid(il_6_posta,il_6_postb,ncol=1)
 
 ggsave(file.path(figdir,"il_6_post.png"),width=6,height=4)
 
-stan_plot(fit_il_6$stanfit, pars=main_pars) + 
+stan_plot(fit_il_6_logit$stanfit, pars=main_pars) + 
   scale_y_discrete(breaks=paste0("b[",1:7,"]"),
         labels=letters[1:7])
 
 # cutpoints
-il_6_ct_plt<-plot(fit_il_6$stanfit,pars=c(paste0("cutpoints[",1:173,"]")),
+il_6_ct_plt<-plot(fit_il_6_logit$stanfit,pars=c(paste0("cutpoints[",1:173,"]")),
                   ci_level = 0.5)
 
 il_6_ct_plt$data %>% mutate(y_rev=rev(y)) %>% 
@@ -242,52 +270,91 @@ ggsave(file.path(figdir,"il_6_post_ct.png"),width=6,height=4)
 #         strip.text = element_text(size=fctsiz),
 #         legend.text = element_text(size=fctsiz))
 
-
-# pltdt %>% 
-#   ggplot(aes(x=cpt,y=`50%`)) + 
-#   geom_line(aes(color='median')) +
-#   geom_ribbon(aes(ymin=`25%`,ymax=`75%`,fill='50% int'))+
-#   geom_ribbon(aes(ymin=`2.5%`,ymax=`97.5%`,fill='95% int'))+
-#   scale_color_manual(labels = c('median'),
-#                      values = c('blue')) +
-#   scale_fill_manual(labels= c('50% int','95% int'),
-#                     values = alpha('blue',c(0.4,0.2)))
-
 if(0){
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",1:20,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",21:40,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",41:60,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",61:80,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",81:100,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",101:120,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",121:140,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",141:160,"]")))
-traceplot(fit_il_6$stanfit, pars=c(paste0("cutpoints[",161:173,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",1:20,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",21:40,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",41:60,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",61:80,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",81:100,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",101:120,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",121:140,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",141:160,"]")))
+traceplot(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",161:173,"]")))
 }
 
 # cell probs
 if(0){
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",1:20,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",21:40,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",41:60,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",61:80,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",81:100,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",101:120,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",121:140,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",141:160,"]")))
-plot(fit_il_6$stanfit,pars=c(paste0("pi[",161:174,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",1:20,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",21:40,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",41:60,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",61:80,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",81:100,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",101:120,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",121:140,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",141:160,"]")))
+plot(fit_il_6_logit$stanfit,pars=c(paste0("pi[",161:174,"]")))
 }
 
 ```
 
+```{r il_6_postpred}
+dr <- 750
+il_6_ppd <- getPostPred(fit_il_6_logit,newdata=hivdat[,main_pars_labs],draws=dr)
+
+il_6_ppd_df <- il_6_ppd %>% as_tibble() %>% mutate(samp=1:n()) %>% 
+  rename_with(~ gsub("V", "", .x,)) %>% pivot_longer(1:dr,names_to="rep")
+
+il_6_dat_df<-hivdat0 %>% select(il_6) %>% mutate(rep=999,samp=1:n()) %>% rename(value=il_6)
+
+y_reps_il_6 <- rbind(il_6_ppd_df,il_6_dat_df) %>% mutate(rep=as.numeric(rep))
+
+ndr_plt <- 10
+y_reps_il_6 %>% filter(rep<=ndr_plt|rep>998) %>% ggplot(aes(x=value, group=rep, col = if_else(rep>998,'y','yrep'))) + geom_density() + 
+scale_colour_manual(name = 'ppc', values = setNames(c('blue','lightblue'), c('y', 'yrep')))
+
+ggsave(file.path(figdir,"il_6_postpred.png"),width=6,height=4)
+```
+
+
+```{r il_6_ppp}
+# posterior predictive p-values (aka Bayesian p-values)
+
+# variance
+ppp_var_il_6 <- y_reps_il_6 %>% group_by(rep) %>%
+  summarize(ppp_v=var(value),.groups="drop") %>% 
+  mutate(true_v=ifelse(rep>998,ppp_v,NA),
+         true_v=max(true_v,na.rm=TRUE),
+         pp_ind=ppp_v>true_v) %>% 
+  filter(rep<998) %>% pull(pp_ind) %>% mean()
+  
+# skewness
+library(e1071)  
+ppp_skew_il_6 <- y_reps_il_6 %>% group_by(rep) %>%
+  summarize(ppp_v=skewness(value),.groups="drop") %>% 
+  mutate(true_v=ifelse(rep>998,ppp_v,NA),
+         true_v=max(true_v,na.rm=TRUE),
+         pp_ind=ppp_v>true_v) %>% 
+  filter(rep<998) %>% pull(pp_ind) %>% mean()
+
+# proportion censored
+ppp_cens_il_6 <- y_reps_il_6 %>% group_by(rep) %>%
+  summarize(ppp_v=mean(value==0),.groups="drop") %>% 
+  mutate(true_v=ifelse(rep>998,ppp_v,NA),
+         true_v=max(true_v,na.rm=TRUE),
+         pp_ind=ppp_v>true_v) %>% 
+  filter(rep<998) %>% pull(pp_ind) %>% mean()
+
+```
+
+
 
 <!-- estimated transformation -->
 ```{r il_6_trans}
-cp_il_6 <- summary(fit_il_6$stanfit, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
+cp_il_6 <- summary(fit_il_6_logit$stanfit, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
 
 cp_il_6_nocnt <- summary(fit_il_6_nocnt$stanfit, pars=c(paste0("cutpoints[",1:173,"]")))$summary[,"50%"]
 
-il_6_trans_dat <- cbind(fit_il_6$standata$truey0[2:174], cp_il_6) %>% as.data.frame() %>% rename(`IL-6`=V1)
+il_6_trans_dat <- cbind(fit_il_6_logit$standata$truey0[2:174], cp_il_6) %>% as.data.frame() %>% rename(`IL-6`=V1)
 
 il_6_trans_dat_nocnt <- cbind(fit_il_6_nocnt$standata$truey0[2:174], cp_il_6_nocnt) %>% as.data.frame() %>% rename(`IL-6`=V1)
 
@@ -318,10 +385,10 @@ ggsave(file.path(figdir,"il_6_trans_nocnt.png"),width=6,height=4)
 ```
 
 ```{r il_6_bmi_dat}
-mn_summ_il_6 <- getMean(fit_il_6, newdat1)
-#mn_vals_il_6 <- getMean(fit_il_6, hiv_dat_il_6, newdat1, summ=FALSE)
-med_summ_il_6 <- getQuantile(fit_il_6, hiv_dat_il_6, newdat1, q=0.5)
-q90_summ_il_6 <- getQuantile(fit_il_6, hiv_dat_il_6, newdat1, q=0.9)
+mn_summ_il_6 <- getMean(fit_il_6_logit, newdat1)
+#mn_vals_il_6 <- getMean(fit_il_6_logit, newdat1, summ=FALSE)
+med_summ_il_6 <- getQuantile(fit_il_6_logit, newdat1, q=0.5)
+q90_summ_il_6 <- getQuantile(fit_il_6_logit, newdat1, q=0.9)
 ```
 
 ```{r il_6_bmi_plt}
@@ -344,6 +411,7 @@ il_6_plt_dat <- rbind(il_6_mn_dat,il_6_med_dat,il_6_q90_dat)
 
 ggplot(il_6_plt_dat) + geom_line(aes(x=bmi_c,y=`il-6`,color=statistic)) +
 geom_ribbon(aes(x=bmi_c,ymin=q2.5,ymax=q97.5,fill=statistic),alpha=0.2)+ylab("IL-6")+xlab("Difference from mean BMI")
+
 ggsave(file.path(figdir,"il_6_bmi.png"),width=6,height=3.5)
 ```
 
@@ -370,18 +438,40 @@ med_summ_il_6 %>%
 ```
 
 
+### IL-1-beta 
 
+!! Start here
 
 ```{r il_1_beta_fit}
-fit_il_1_beta <- bayes_cpm(hiv_dat_il_1_beta, seed=77845, 
-                 iter=4000, warmup=2000, chains=2, init="0", 
-                 control = list(adapt_delta = 0.95))
+fit_il_1_beta_probit <- bayes_cpm(il_1_beta ~ bmi_c + age_c + male + 
+                               nonwhite + study.linc + cd4_100_c + smoker,
+                             data=hivdat, link="probit", seed=3845,
+                             iter=4000, warmup=2000, chains=2, init="0", 
+                             control = list(adapt_delta = 0.95))
 
+fit_il_1_beta_logit <- bayes_cpm(il_1_beta ~ bmi_c + age_c + male + 
+                              nonwhite + study.linc + cd4_100_c + smoker,
+                            data=hivdat, link="logistic", seed=6734,
+                            iter=4000, warmup=2000, chains=2, init="0", 
+                            control = list(adapt_delta = 0.95))
+```
+
+
+```{r il_1_beta_mcmc_chk}
 qplot(summary(fit_il_1_beta)$summary[,"Rhat"])
 
+traceplot(fit_il_1_beta, pars=main_pars)
+```
+
+
+```{r il_1_beta_loo}
+
+```
+
+
+```{r il_1_beta_pars}
 summary(fit_il_1_beta, pars=main_pars)$summary %>% round(3) %>% set_rownames(main_pars_labs)
 
-traceplot(fit_il_1_beta, pars=main_pars)
 plot(fit_il_1_beta, pars=main_pars)
 
 as.matrix(fit_il_1_beta, pars=main_pars)  %>%
@@ -396,9 +486,14 @@ mcmc_intervals() + scale_y_discrete(labels = main_pars_labs2[c(3,4,5,7)])
 plot_grid(fit_il_1_betaa,fit_il_1_betab,ncol=1)
 
 ggsave(file.path(figdir,"il_1_beta_post.png"),width=6,height=4)
+```
 
-#traceplot(fit_il_1_beta, pars=c("cutpoints"))
-#plot(fit_il_1_beta,pars=c(paste0("pi[",1:40,"]")))
+```{r il_1_beta_postpred}
+
+```
+
+```{r il_1_beta_ppp}
+
 ```
 
 ```{r il_1_beta_trans}
@@ -421,14 +516,14 @@ ggplot(data=il_1_beta_trans_dat,aes(x=`IL-1-beta`,y=cp_il_1_beta,color = "est"))
 ggsave(file.path(figdir,"il_1_beta_trans.png"),width=6,height=4)
 ```
 
-```{r il_6_bmi_dat}
+```{r il_1_beta_dat}
 mn_summ_il_1_beta <- getMean(fit_il_1_beta, hiv_dat_il_1_beta, newdat1)
 med_summ_il_1_beta <- getQuantile(fit_il_1_beta, hiv_dat_il_1_beta, newdat1, q=0.5)
 q90_summ_il_1_beta <- getQuantile(fit_il_1_beta, hiv_dat_il_1_beta, newdat1, q=0.9)
 
 ```
 
-```{r il_6_bmi_plt}
+```{r il_1_beta_plt}
 il_1_beta_mn_dat <- mn_summ_il_1_beta %>% 
   select(med_mn, mn_q2.5, mn_q97.5, bmi_c) %>% 
   mutate(statistic="mean") %>% 
